Slider alignment and source code button fix

--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ nav ul li a{
 .grid-wrapper{
     max-width: 1100px;
     width: 100%;
-    margin-left: 80px;
+    margin-left: 170px;
     position: relative;
    
    
@@ -161,6 +161,7 @@ nav ul li a{
     grid-auto-flow: column;
     grid-auto-columns: calc((100% / 3) - 12px);
     gap: 20px;
+    overflow: hidden;
     
 
 
@@ -206,6 +207,11 @@ nav ul li a{
    color: gray;
    font-size: 1.31rem;
 
+}
+
+.source-code-btn{
+    width: 80px;
+    height: 50px;
 }
 
 @media screen and (max-width: 900px){
